// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Robot Movement Tests should handle all basic movement combinations 1`] = `
{
  "col": 2,
  "direction": 0,
  "row": 2,
}
`;

exports[`Robot Movement Tests should handle all basic movement combinations 2`] = `
{
  "col": 1,
  "direction": 3,
  "row": 2,
}
`;

exports[`Robot Movement Tests should handle all basic movement combinations 3`] = `
{
  "col": 1,
  "direction": 1,
  "row": 2,
}
`;

exports[`Robot Movement Tests should handle all basic movement combinations 4`] = `
{
  "col": 1,
  "direction": 1,
  "row": 3,
}
`;

exports[`Robot Movement Tests should handle all basic movement combinations 5`] = `
{
  "col": 1,
  "direction": 0,
  "row": 2,
}
`;

exports[`Robot Movement Tests should handle all basic movement combinations 6`] = `
{
  "col": 1,
  "direction": 2,
  "row": 2,
}
`;

exports[`Robot Movement Tests should handle all basic movement combinations 7`] = `
{
  "col": 0,
  "direction": 2,
  "row": 2,
}
`;

exports[`Robot Movement Tests should handle all basic movement combinations 8`] = `
{
  "col": 1,
  "direction": 1,
  "row": 2,
}
`;

exports[`Robot Movement Tests should handle all basic movement combinations 9`] = `
{
  "col": 1,
  "direction": 3,
  "row": 2,
}
`;

exports[`Robot Movement Tests should handle all basic movement combinations 10`] = `
{
  "col": 1,
  "direction": 3,
  "row": 1,
}
`;

exports[`Robot Movement Tests should handle all basic movement combinations 11`] = `
{
  "col": 1,
  "direction": 2,
  "row": 2,
}
`;

exports[`Robot Movement Tests should handle all basic movement combinations 12`] = `
{
  "col": 1,
  "direction": 0,
  "row": 2,
}
`;

exports[`Robot Style Tests should handle edge positions 1`] = `
{
  "transform": "rotate(90deg)",
}
`;

exports[`Robot Style Tests should handle edge positions 2`] = `
{
  "transform": "rotate(90deg)",
}
`;

exports[`Robot Style Tests should handle edge positions 3`] = `
{
  "transform": "rotate(90deg)",
}
`;

exports[`Robot Style Tests should handle edge positions 4`] = `
{
  "transform": "rotate(90deg)",
}
`;

exports[`Robot Style Tests should return correct rotation styles for all directions 1`] = `
{
  "transform": "rotate(90deg)",
}
`;

exports[`Robot Style Tests should return correct rotation styles for all directions 2`] = `
{
  "transform": "rotate(180deg)",
}
`;

exports[`Robot Style Tests should return correct rotation styles for all directions 3`] = `
{
  "transform": "rotate(270deg)",
}
`;

exports[`Robot Style Tests should return correct rotation styles for all directions 4`] = `
{
  "transform": "",
}
`;
